Add author's credit to the final scene

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
         <div class="credits-content">
             <button class="close-button" onclick="hideCredits()">×</button>
             <div class="credits-scroll">
+			    <div class="credits-section" style="margin-bottom: 60px;">
+                     <p style="font-style: italic; color: #DAA520;">
+                      Веб-дизайн, архитектура и структура сайта являются авторской разработкой
+                     </p>
+                </div>
                 <div class="credits-section">
                     <h2>I. ГЛАВНОЕ УПРАВЛЕНИЕ</h2>
                     <p><span>Системный Архитектор</span>Hallow [Sarcastic Saint]</p>
