Style: Refine 'About Me' text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="sidebar-section">
                 <h4>Обо мне</h4>
                 <p>
-                    Я — IT-инженер, практик, специализирующийся на self-hosted инфраструктуре (Linux/Windows, Docker, Nginx).
+                    Я — IT-инженер-практик, специализирующийся на self-hosted инфраструктуре (Linux/Windows, Docker, Nginx).
 				</p>
                  <p>
 					Этот сайт — точка входа в мою экосистему и R&D-песочницу, где я фиксирую свой опыт, решаю инженерные задачи и развиваю свой self-hosted стек.
